# Kaggle-Titanic-Survival-Analysis

./: main.py  pyproject.toml
.kaggle/: kaggle.json
.streamlit/: config.toml
src/: app.py  config.py  data_loader.py  models.py  utils.py  visualizations.py
