[tool.poetry]
name = "repl-nix-kagglepythonexplorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
kaggle = "^1.6.17"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
